--- a/style/md-drag-drop.css
+++ b/style/md-drag-drop.css
@@ -1,3 +1,12 @@
+.flash_msg{
+	color: rgb(0, 0, 0);
+	margin-left: 45%;
+	position: absolute;
+	background-color: rgb(255, 228, 196);
+	padding: 2px 30px;
+	border-radius: 22px;
+	display: none;
+}
 .selection {
 	position: absolute;
 	border: 1px solid #89B;
