updated style of selected item

--- a/style/md-drag-drop.css
+++ b/style/md-drag-drop.css
@@ -33,7 +33,7 @@
 	}
 .dropped {
 	background-color: #808080;
-	border-color: #B89;
+	border-color: black  ;
 	}	
 .active {  
 	background-color: #A8A8A8;
